<resources>
    <string name="app_name">Insecurity Perceiver</string>
    <string name="logo">Logo</string>
    <string name="start_location">Start location</string>
    <string name="add_perception">Add perception</string>
    <string name="level_of_perception">Level of perception</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="context">Context</string>
    <string name="public_transport">Transport\n(Public)</string>
    <string name="private_transport">Transport\n(Private)</string>
    <string name="on_foot">On foot</string>
    <string name="at_local_work">Local\nwork</string>
    <string name="at_home">At home</string>
    <string name="report_title">Report of perception</string>
    <string name="report">Report</string>
    <string name="value_insecurity">Insecurity value</string>
    <string name="level">Level</string>
    <string name="geographical_coordinates">Geographical coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="perception">Perception</string>
    <string name="utm" translatable="false">UTM</string>
    <string name="x" translatable="false">X</string>
    <string name="y" translatable="false">Y</string>
    <string name="zone">Zone</string>
    <string name="hemisphere">Hemisphere</string>
    <string name="empty_value" translatable="false">--</string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">New account</string>
    <string name="nick_name">User</string>
    <string name="birthday">Birthday</string>
    <string name="forgot_password">Forgot password</string>
    <string name="password">Password</string>
    <string name="sing_up_title">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign up</string>
    <string name="half">Half</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="nationality">Nationality</string>
    <string name="socioeconomic_level">Socioeconomic Level</string>
    <string name="occupation">Occupation</string>
    <string name="forgot_pw_instructions1">Insert here the email address with which you registered.</string>
    <string name="forgot_pw_instructions2">We will send you an email with your password. If you can not find it, look in the SPAM tray.</string>
    <string name="profile">Profile</string>
    <string name="user_image">User image</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="id_user">ID user</string>
    <string name="age">Age</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="type_of_danger">Type of danger</string>
    <string name="suspect">Suspect</string>
    <string name="less_serious">Less serious</string>
    <string name="something_serious">Something serious</string>
    <string name="serious">Serious</string>
    <string name="very_serious">Very serious</string>
    <string name="armed_person">Armed Person</string>
    <string name="drugs_traffic">Drugs sales/purchase</string>
    <string name="alcohol_traffic">Drunk people</string>
    <string name="harassment">Harassment</string>
    <string name="robbery">Robbery</string>
    <string name="vandalism">Vandalism</string>
    <string name="assault">Assault</string>
    <string name="forced_entry">Forced Entry</string>
    <string name="kidnapping">Kidnapping</string>
    <string name="sexual_abuse">Sexual abuse</string>
    <string name="aggravated_aggression">Aggravated aggression (Injury)</string>
    <string name="murder">Murder</string>
    <string name="terrorism">Terrorism</string>
    <string name="send">Send</string>
    <string name="sending">Sending</string>
    <string name="sent">Sent</string>
    <string name="askToActivateGPS">Location not found\nMake sure GPS and\nWiFi are enabled</string>
    <string name="high_accuracy_enable">Make sure GPS is set to "High Accuracy" mode.</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="go_to_user">Go to user</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="go_to_start_location">Go to add perception</string>
    <string name="go_to_history">Go to history</string>
    <string name="go_to_map">Go to map</string>
    <string name="intern_notification">Notification</string>
    <string name="next">Continue</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="exit">Exit</string>
    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>