<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.EditUserFragment"
    android:orientation="vertical"
    android:background="@color/activityBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/edit_profile"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

            <Spinner
                android:id="@+id/nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="nationality"
                android:hint="@string/nationality"
                android:textColor="@color/colorSecondaryDark"/>

            <EditText
                android:id="@+id/occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="nationality"
                android:hint="@string/occupation"
                android:inputType="textNoSuggestions"
                android:textColorHint="@color/colorSecondaryLight"
                android:textColor="@color/colorSecondaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/socioeconomic_level"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/radioButtonLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low" />

                <RadioButton
                    android:id="@+id/radioButtonMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/half" />

                <RadioButton
                    android:id="@+id/radioButtonHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high" />
            </RadioGroup>

            <Button
                android:id="@+id/buttonRegistrar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/container1"
                android:fontFamily="@font/roboto_black"
                android:text="@string/next"
                android:textColor="@color/activityBackground" />
        </LinearLayout>

</ScrollView>
