<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".UI.LogInFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_logo"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/activityBackground"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextUserLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="username"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/nick_name"
            android:inputType="textNoSuggestions"
            android:textColor="@color/colorSecondaryDark"
            android:textColorHint="@color/colorSecondaryLight" />

        <EditText
            android:id="@+id/editTextPasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="username"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorSecondaryDark"
            android:textColorHint="@color/colorSecondaryLight" />

        <Button
            android:id="@+id/buttonForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_medium"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/red_button"
            android:fontFamily="@font/roboto_black"
            android:text="@string/log_in"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonGoToSingUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_medium"
            android:padding="10dp"
            android:text="@string/create_new_account"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="16sp"/>

</LinearLayout>