<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    tools:context=".ContextFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/context"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/button_closeContext"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginTop="-35dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/exit"
            android:src="@drawable/close" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_publicTransport"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="-110dp"
            android:layout_marginBottom="-70dp"
            android:background="@drawable/background_add_location"
            android:fontFamily="sans-serif-black"
            android:text="@string/public_transport"
            android:textColor="@color/activityBackground"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_privateTransport"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginBottom="-70dp"
            android:background="@drawable/background_add_location"
            android:fontFamily="sans-serif-black"
            android:text="@string/private_transport"
            android:textColor="@color/activityBackground"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_onFoot"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginEnd="-110dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_add_location"
            android:fontFamily="sans-serif-black"
            android:text="@string/on_foot"
            android:textColor="@color/activityBackground"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_atLocalWork"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="-55dp"
            android:layout_marginBottom="-70dp"
            android:background="@drawable/background_add_location"
            android:fontFamily="sans-serif-black"
            android:text="@string/at_local_work"
            android:textColor="@color/activityBackground"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_atHome"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginEnd="-55dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_add_location"
            android:fontFamily="sans-serif-black"
            android:text="@string/at_home"
            android:textColor="@color/activityBackground"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:elevation="0dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/skip"
            android:textColor="@color/colorSecondaryDark" />

    </LinearLayout>

</LinearLayout>