<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SingUpOneFragment"
    android:orientation="vertical"
    android:background="@color/activityBackground"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/sing_up_title"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorSecondaryLight"
            android:textColor="@color/colorSecondaryDark"
            android:fontFamily="@font/roboto_medium"/>

        <EditText
            android:id="@+id/editTextUserSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="username"
            android:hint="@string/nick_name"
            android:inputType="textNoSuggestions"
            android:textColorHint="@color/colorSecondaryLight"
            android:textColor="@color/colorSecondaryDark"
            android:fontFamily="@font/roboto_medium"/>

        <EditText
            android:id="@+id/editTextPasswordSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorSecondaryLight"
            android:textColor="@color/colorSecondaryDark"
            android:fontFamily="@font/roboto_medium"/>

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorSecondaryLight"
            android:textColor="@color/colorSecondaryDark"
            android:fontFamily="@font/roboto_medium"/>


        <Button
            android:id="@+id/button_continue1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/container1"
            android:fontFamily="@font/roboto_black"
            android:text="@string/next"
            android:textColor="@color/activityBackground" />
    </LinearLayout>

</LinearLayout>